--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
     <div id="error-404-screen">
         <h1>404</h1>
         <p>Oops! The track you're looking for doesn't exist.</p>
-        <a href="index.html" class="home-button">Back to Phonkify</a>
+        <a href="https://phonkify.github.io/" class="home-button">Back to Phonkify</a>
     </div>
 
 
