--- a/index.html
+++ b/index.html
@@ -1467,6 +1467,8 @@
                 width: 95%;
                 padding: 20px;
                 max-width: 95%;
+                max-height: 85vh;
+                overflow-y: auto;
             }
             .embed-modal-body {
                 flex-direction: column;
