--- a/index.html
+++ b/index.html
@@ -2969,6 +2969,17 @@
                     tracksData.push({ id: doc.id, ...doc.data() });
                 });
 
+                // --- ADDED SORTING HERE ---
+                // Sort alphabetically by Title
+                tracksData.sort((a, b) => {
+                    const nameA = (a.title || "").toUpperCase(); // ignore upper and lowercase
+                    const nameB = (b.title || "").toUpperCase(); // ignore upper and lowercase
+                    if (nameA < nameB) return -1;
+                    if (nameA > nameB) return 1;
+                    return 0;
+                });
+                // --------------------------
+
                 // Initialize app data
                 initTrackList();
                 
